Squashed commit of the following:
commit 85435285c7ce7cce76ee012d5fb7f00109264d2e
Author: chg-C <167045205+chg-C@users.noreply.github.com>
Date:   Fri Nov 15 12:32:50 2024 +0900

    11-15 1

commit 1ddc1d047ecf1827374dc99cc099e4bf70406bca
Author: chg-C <167045205+chg-C@users.noreply.github.com>
Date:   Thu Nov 14 18:01:06 2024 +0900

    11-14 1

    충돌 처리 1차

commit 95b2988492d80cdb5af6c7d337f0665094ec28f6
Author: chg-C <167045205+chg-C@users.noreply.github.com>
Date:   Wed Nov 13 12:19:26 2024 +0900

    11-13

    -캐릭터 스프라이트 애니메이션
    -배경 이미지 스크롤
    -캐릭터 기본 구현
    -플레이어 / 적 생성 기능 구현

    =>충돌 처리 필요

--- a/FrameWork/FrameWork.vcxproj
+++ b/FrameWork/FrameWork.vcxproj
@@ -147,12 +147,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Bird.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Chap.h" />
+    <ClInclude Include="Character.h" />
     <ClInclude Include="CMng.h" />
     <ClInclude Include="Collider.h" />
+    <ClInclude Include="CustomDefine.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="DXUTsound.h" />
     <ClInclude Include="DeviceFont.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Include.h" />
@@ -163,10 +167,11 @@
     <ClInclude Include="Mysql.h" />
     <ClInclude Include="Over.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="Player2.h" />
+    <ClInclude Include="Singleton.h" />
     <ClInclude Include="SelectArrow.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="Sprite.h" />
+    <ClInclude Include="Sprite2.h" />
     <ClInclude Include="UIButton.h" />
     <ClInclude Include="UISprite.h" />
   </ItemGroup>
@@ -176,6 +181,7 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="DXUTsound.cpp" />
     <ClCompile Include="DeviceFont.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="key.cpp" />
@@ -186,9 +192,10 @@
     <ClCompile Include="Mysql.cpp" />
     <ClCompile Include="Over.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Player2.cpp" />
     <ClCompile Include="SelectArrow.cpp" />
     <ClCompile Include="Sound.cpp" />
+    <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="Sprite2.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="UIButton.cpp" />
     <ClCompile Include="UISprite.cpp" />
