Squashed commit of the following:
commit 8a92002bb535fa3fae03d2315a2e0d6a1448cbf0
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Thu Nov 21 11:51:24 2024 +0900

    20241121

commit 455a6e6b9c83179a85837f8990e5bc496936834c
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Wed Nov 20 18:18:38 2024 +0900

    20241120

commit bdcc11d219b06307b3423e787f068299769fc006
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Tue Nov 19 18:29:21 2024 +0900

    20241119 학원 작업

commit 8a59037f405290835db9c937a25d799eb8683bdf
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Mon Nov 18 18:01:00 2024 +0900

    20241118 학원 작업

commit ecbb1c2c1e907a380cd41f16f3c54c38ee072bf1
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Mon Nov 18 10:48:12 2024 +0900

    Button 상하좌우 이동 구현

commit 0bcb77f9115cc4b3b6fa25e382171579ba9b5bbc
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Fri Nov 15 17:59:58 2024 +0900

    2024-11-15 학원작업

commit 89e24f6f91c49810d2327db510d800812d98516c
Merge: 2692335 ed89f68
Author: chg-C <167045205+chg-C@users.noreply.github.com>
Date:   Fri Nov 15 13:00:01 2024 +0900

    Merge branch 'develop' into STH_Dev

commit 2692335110cda3a04513bf8e5456ce849d76674b
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Fri Nov 15 12:27:24 2024 +0900

    UIMenu basic

commit 5b435b4b690945daa4123fc89acf9b36ae960449
Author: cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Fri Nov 15 03:09:48 2024 +0900

    SelectArrow

commit 19f8fccc36cdd68b3cb2aaa13fd9a3aa89a2f5f3
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Thu Nov 14 21:45:18 2024 +0900

    2024-11-14 학원 작업

commit 39737eb4bfdf812052e65055bc63ef9e0a401939
Author: Cuptae <106813678+cuptae@users.noreply.github.com>
Date:   Wed Nov 13 17:57:17 2024 +0900

    2024-11-13 학원 작업

--- a/FrameWork/FrameWork.vcxproj
+++ b/FrameWork/FrameWork.vcxproj
@@ -165,14 +165,18 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Mysql.h" />
+    <ClInclude Include="OptionPopUp.h" />
     <ClInclude Include="Over.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PowerPopUp.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="SelectArrow.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Sprite2.h" />
     <ClInclude Include="UIButton.h" />
+    <ClInclude Include="UIManager.h" />
+    <ClInclude Include="UIPopUp.h" />
     <ClInclude Include="UISprite.h" />
   </ItemGroup>
   <ItemGroup>
@@ -190,13 +194,16 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Mysql.cpp" />
+    <ClCompile Include="OptionPopUp.cpp" />
     <ClCompile Include="Over.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PowerPopUp.cpp" />
     <ClCompile Include="SelectArrow.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Sprite2.cpp" />
     <ClCompile Include="UIButton.cpp" />
+    <ClCompile Include="UIPopUp.cpp" />
     <ClCompile Include="UISprite.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
