--- a/FrameWork/FrameWork.vcxproj.filters
+++ b/FrameWork/FrameWork.vcxproj.filters
@@ -73,6 +73,27 @@
     <Filter Include="소스 파일\UI\PopUP">
       <UniqueIdentifier>{8f8e3f69-cd0c-4425-b211-1a9c5ec84f46}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Custom\Container">
+      <UniqueIdentifier>{cfd48340-0b60-4377-9423-d121218dd30b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Custom\Game\Objects\Effect">
+      <UniqueIdentifier>{f0b4893b-8036-4563-9e79-b8e8988e95d3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Custom\Game\Objects\Character">
+      <UniqueIdentifier>{ba26de0a-2d0c-4b85-b514-0685fbc83074}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Custom\Game\Objects\Items">
+      <UniqueIdentifier>{286482b3-8c1e-4750-826f-b4397d461a2a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Custom\Game\GameManager\SubManagers">
+      <UniqueIdentifier>{c0c7a85a-9e18-47a7-b2c2-286d06dfa22d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Custom\Render\Animation">
+      <UniqueIdentifier>{f5b071b7-c68c-4819-a39a-c9c813f3d2ec}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Custom\Game\Time">
+      <UniqueIdentifier>{b405c88f-619e-4fb4-b540-d2cf7c8afd81}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Define.h">
@@ -182,6 +203,54 @@
     </ClInclude>
     <ClInclude Include="PowerPopUp.h">
       <Filter>소스 파일\UI\PopUP</Filter>
+    </ClInclude>
+    <ClInclude Include="Cache.h">
+      <Filter>Custom\Container</Filter>
+    </ClInclude>
+    <ClInclude Include="TextEffect.h">
+      <Filter>Custom\Game\Objects\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Effect.h">
+      <Filter>Custom\Game\Objects\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Character.h">
+      <Filter>Custom\Game\Objects\Character</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>Custom\Game\Objects\Character</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Custom\Game\Objects\Character</Filter>
+    </ClInclude>
+    <ClInclude Include="Projectile.h">
+      <Filter>Custom\Game\Objects\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="SpriteEffect.h">
+      <Filter>Custom\Game\Objects\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyManager.h">
+      <Filter>Custom\Game\GameManager\SubManagers</Filter>
+    </ClInclude>
+    <ClInclude Include="Item.h">
+      <Filter>Custom\Game\Objects\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="SpriteAnimation.h">
+      <Filter>Custom\Render\Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="SpriteAnimator.h">
+      <Filter>Custom\Render\Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="Time.h">
+      <Filter>Custom\Game\Time</Filter>
+    </ClInclude>
+    <ClInclude Include="EffectManager.h">
+      <Filter>Custom\Game\GameManager\SubManagers</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerManager.h">
+      <Filter>Custom\Game\GameManager\SubManagers</Filter>
     </ClInclude>
     <ClInclude Include="Cache.h">
       <Filter>Custom\Container</Filter>
@@ -353,6 +422,44 @@
     <ClCompile Include="EffectManager.cpp">
       <Filter>Custom\Game\GameManager\SubManagers</Filter>
     </ClCompile>
+    <ClCompile Include="TextEffect.cpp">
+      <Filter>Custom\Game\Objects\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Custom\Game\Objects\Character</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Custom\Game\Objects\Character</Filter>
+    </ClCompile>
+    <ClCompile Include="Projectile.cpp">
+      <Filter>Custom\Game\Objects\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyManager.cpp">
+      <Filter>Custom\Game\GameManager\SubManagers</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteAnimation.cpp">
+      <Filter>Custom\Render\Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteAnimator.cpp">
+      <Filter>Custom\Render\Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="GameManager.cpp">
+      <Filter>Custom\Game\GameManager</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteEffect.cpp">
+      <Filter>Custom\Game\Objects\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Time.cpp">
+      <Filter>Custom\Game\Time</Filter>
+    </ClCompile>
+    <ClCompile Include="EffectManager.cpp">
+      <Filter>Custom\Game\GameManager\SubManagers</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="FrameWork.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="FrameWork.rc">
