--- a/FrameWork/FrameWork.vcxproj.filters
+++ b/FrameWork/FrameWork.vcxproj.filters
@@ -240,6 +240,9 @@
     <ClInclude Include="UISprite.h">
       <Filter>소스 파일\UI</Filter>
     </ClInclude>
+    <ClInclude Include="Option.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="key.cpp">
