--- a/FrameWork/FrameWork.vcxproj.filters
+++ b/FrameWork/FrameWork.vcxproj.filters
@@ -94,6 +94,9 @@
     <Filter Include="Custom\Game\Time">
       <UniqueIdentifier>{b405c88f-619e-4fb4-b540-d2cf7c8afd81}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\UI\UIElement">
+      <UniqueIdentifier>{39baa81c-4f6e-4ede-b0dc-1a8ebd100b84}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Define.h">
@@ -162,7 +165,7 @@
     <ClInclude Include="Map.h">
       <Filter>Custom\Game\Map</Filter>
     </ClInclude>
-     <ClInclude Include="Character.h">
+    <ClInclude Include="Character.h">
       <Filter>Custom\Game\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Enemy.h">
@@ -171,18 +174,6 @@
     <ClInclude Include="Player.h">
       <Filter>Custom\Game\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="SelectArrow.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="UISprite.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="UIButton.h">
-      <Filter>소스 파일\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="UIPopUp.h">
-      <Filter>소스 파일\UI</Filter>
-    </ClInclude>
     <ClInclude Include="UISprite.h">
       <Filter>소스 파일\UI</Filter>
     </ClInclude>
@@ -190,12 +181,6 @@
       <Filter>소스 파일\UI</Filter>
     </ClInclude>
     <ClInclude Include="UISprite.h">
-      <Filter>소스 파일\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="SelectArrow.h">
-      <Filter>소스 파일\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="UIButton.h">
       <Filter>소스 파일\UI</Filter>
     </ClInclude>
     <ClInclude Include="OptionPopUp.h">
@@ -300,6 +285,39 @@
     <ClInclude Include="PlayerManager.h">
       <Filter>Custom\Game\GameManager\SubManagers</Filter>
     </ClInclude>
+    <ClInclude Include="Option.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ResourceManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="UIButton.h">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClInclude>
+    <ClInclude Include="UIPopUp.h">
+      <Filter>소스 파일\UI\PopUP</Filter>
+    </ClInclude>
+    <ClInclude Include="SelectArrow.h">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClInclude>
+    <ClInclude Include="UISprite.h">
+      <Filter>소스 파일\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="Slot.h">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClInclude>
+    <ClInclude Include="UIButton.h">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClInclude>
+    <ClInclude Include="SelectArrow.h">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClInclude>
+    <ClInclude Include="FmodSoundManager.h">
+      <Filter>소스 파일\Sound</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundInterface.h">
+      <Filter>소스 파일\Sound</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="key.cpp">
@@ -357,27 +375,6 @@
       <Filter>D3D Core\코어 소스</Filter>
     </ClCompile>
     <ClCompile Include="UISprite.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="UIButton.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="SelectArrow.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="UIButton.cpp">
-      <Filter>소스 파일\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="UIPopUp.cpp">
-      <Filter>소스 파일\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="UISprite.cpp">
-      <Filter>소스 파일\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="SelectArrow.cpp">
-      <Filter>소스 파일\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="UIButton.cpp">
       <Filter>소스 파일\UI</Filter>
     </ClCompile>
     <ClCompile Include="UISprite.cpp">
@@ -454,6 +451,36 @@
     </ClCompile>
     <ClCompile Include="EffectManager.cpp">
       <Filter>Custom\Game\GameManager\SubManagers</Filter>
+    </ClCompile>
+    <ClCompile Include="ResourceManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="UIButton.cpp">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClCompile>
+    <ClCompile Include="UIPopUp.cpp">
+      <Filter>소스 파일\UI\PopUP</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectArrow.cpp">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClCompile>
+    <ClCompile Include="UISprite.cpp">
+      <Filter>소스 파일\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UIButton.cpp">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectArrow.cpp">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClCompile>
+    <ClCompile Include="UIButton.cpp">
+      <Filter>소스 파일\UI\UIElement</Filter>
+    </ClCompile>
+    <ClCompile Include="FmodSoundManager.cpp">
+      <Filter>소스 파일\Sound</Filter>
+    </ClCompile>
+    <ClCompile Include="SoundInterface.cpp">
+      <Filter>소스 파일\Sound</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
