--- a/FrameWork/FrameWork.vcxproj
+++ b/FrameWork/FrameWork.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="CustomDefine.h" />
     <ClInclude Include="CustomInclude.h" />
     <ClInclude Include="Define.h" />
+    <ClInclude Include="DroppedItemManager.h" />
     <ClInclude Include="DXUTsound.h" />
     <ClInclude Include="DeviceFont.h" />
     <ClInclude Include="Effect.h" />
@@ -170,6 +171,7 @@
     <ClInclude Include="Logo.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="MovingProjectile.h" />
     <ClInclude Include="Mysql.h" />
     <ClInclude Include="Option.h" />
     <ClInclude Include="OptionPopUp.h" />
@@ -194,6 +196,7 @@
     <ClInclude Include="UIManager.h" />
     <ClInclude Include="UIPopUp.h" />
     <ClInclude Include="UISprite.h" />
+    <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bird.cpp" />
@@ -206,15 +209,18 @@
     <ClCompile Include="EnemyManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="key.cpp" />
     <ClCompile Include="Logo.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="MovingProjectile.cpp" />
     <ClCompile Include="Mysql.cpp" />
     <ClCompile Include="OptionPopUp.cpp" />
     <ClCompile Include="Over.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="PowerPopUp.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
@@ -230,6 +236,7 @@
     <ClCompile Include="UIButton.cpp" />
     <ClCompile Include="UIPopUp.cpp" />
     <ClCompile Include="UISprite.cpp" />
+    <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="FrameWork.rc" />
